--- a/roles/nginx/templates/wrhost.j2
+++ b/roles/nginx/templates/wrhost.j2
@@ -3,8 +3,8 @@ server {
 
     server_name {{ item.server_name }};
 
-    ssl_certificate /etc/letsencrypt/live/{{ cert_key_name }}/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/{{ cert_key_name }}/privkey.pem;
+    ssl_certificate /var/lib/dehydrated/certs/{{ cert_key_name }}/fullchain.pem;
+    ssl_certificate_key /var/lib/dehydrated/certs/{{ cert_key_name }}/privkey.pem;
 
     ssl_session_cache shared:le_nginx_SSL:1m;
     ssl_session_timeout 1440m;
@@ -96,13 +96,5 @@ server {
 
     {% endif %}
 
-}
-
-server {
-    listen 80;
-
-    server_name {{ item.server_name }};
-
-    return 301 https://{{ item.server_name }}$request_uri;
 }
 
